--- a/src/quadrotor_msgs/CMakeLists.txt
+++ b/src/quadrotor_msgs/CMakeLists.txt
@@ -74,6 +74,7 @@ add_message_files(
   Odometry.msg
   PolynomialTrajectory.msg
   LQRTrajectory.msg
+  TrajectoryPoint.msg
 )
 
 generate_messages(
